--- a/index.html
+++ b/index.html
@@ -769,6 +769,12 @@
           <button id="setScanAreaBtn">Set Normal Scan Area</button>
           <button id="setVoidCascadeAreaBtn" class="record-btn" style="margin-top: 0.5rem;">Set Void Cascade Area</button>
           <div id="scanAreaDisplay">No area set.</div>
+          <button id="testScannerBtn" class="record-btn" style="margin-top: 0.5rem; border-color: #eab308; color: #eab308;">Test Scanner (Preview)</button>
+          <div id="scannerPreview" style="margin-top: 0.5rem; display: none; flex-direction: column; gap: 0.5rem;">
+            <div style="font-size: 0.8rem; color: #a1a1aa;">Seen Text:</div>
+            <div id="scannerSeenText" style="font-family: monospace; background: #000; padding: 0.5rem; border-radius: 4px; color: #fff; font-size: 0.8rem; word-break: break-all;"></div>
+            <img id="scannerSnapshot" style="width: 100%; border: 1px solid #3f3f46; border-radius: 4px;" />
+          </div>
         </div>
       </div>
       <div class="resizer-panel"></div>
@@ -1164,6 +1170,33 @@
     const setVoidCascadeAreaBtn = document.getElementById('setVoidCascadeAreaBtn');
     const scanAreaDisplay = document.getElementById('scanAreaDisplay');
     const scanPauseInput = document.getElementById('scanPauseInput');
+    const testScannerBtn = document.getElementById('testScannerBtn');
+    const scannerPreview = document.getElementById('scannerPreview');
+    const scannerSeenText = document.getElementById('scannerSeenText');
+    const scannerSnapshot = document.getElementById('scannerSnapshot');
+
+    testScannerBtn.addEventListener('click', async () => {
+      if (window.electronAPI && window.electronAPI.testScanner) {
+        testScannerBtn.textContent = "Scanning...";
+        testScannerBtn.disabled = true;
+        try {
+          const result = await window.electronAPI.testScanner();
+          scannerPreview.style.display = 'flex';
+          if (result.error) {
+            scannerSeenText.textContent = "Error: " + result.error;
+            scannerSnapshot.src = "";
+          } else {
+            scannerSeenText.textContent = result.text || "[No text detected]";
+            scannerSnapshot.src = result.image;
+          }
+        } catch (e) {
+          scannerSeenText.textContent = "Error: " + e;
+        } finally {
+          testScannerBtn.textContent = "Test Scanner (Preview)";
+          testScannerBtn.disabled = false;
+        }
+      }
+    });
 
     function updateScanAreaDisplay(areas) {
       // Handle both old format (single area) and new format (object with keys)
