--- a/index.html
+++ b/index.html
@@ -1021,11 +1021,10 @@
             <div id="updateStatus" style="font-size: 0.8rem; color: #a1a1aa; margin-top: 0.5rem; text-align: center;"></div>
             <button id="viewPatchNotesBtn" class="record-btn" style="margin-top: 0.5rem;">View Patch Notes (Latest)</button>
             <div id="patchNotesContent" style="display:none; background:#121214; padding:1rem; margin-top:0.5rem; border-radius:4px; font-size:0.8rem; color:#a1a1aa; max-height:200px; overflow-y:auto; border: 1px solid #27272a;">
-                <h4 style="color:#fff; margin-top:0; margin-bottom:0.5rem;">v1.8.1 - Quality of Life & Fixes</h4>
+                <h4 style="color:#fff; margin-top:0; margin-bottom:0.5rem;">v1.8.2 - Extraction Fixes</h4>
                 <ul style="padding-left:1.2rem; margin:0; display:flex; flex-direction:column; gap:0.25rem;">
-                    <li><strong>Start Minimized:</strong> Added option to start the app minimized to tray.</li>
-                    <li><strong>Fixes:</strong> Improved relic detection from logs and fixed button layout on small windows.</li>
-                    <li><strong>Features:</strong> Includes all Pride & Customization updates (Flags, Hydration themes).</li>
+                    <li><strong>Scanner Fix:</strong> Removed aggressive triggers that caused early detection while waiting in extraction.</li>
+                    <li><strong>Void Cascade:</strong> Fixed logic to prevent double-counting missions in Cascade mode.</li>
                 </ul>
             </div>
             <div class="divider"></div>
